--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Seoyoung Choi</h1>
-								<p>성장하는 개발자 <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>성장하는 개발자 <br><a href="https://github.com/seoyoung9/Mid-Term-Project.git">GitHub</a> 
+								<br> free templated created by <a href="https://html5up.net/">here</a></p>
 							</div>
 						</div>
 						<nav>
