--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/my_face.jpg" alt="" /></span>
 								<p>Hello, I'm Seoyoung Choi, majoring in software at Dankkok University! 
 									<br>If you want to see my work, please visit <a href="#work">HERE</a></p>
 							</article>
