--- a/index.html
+++ b/index.html
@@ -41,17 +41,21 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/my_face.jpg" alt="" /></span>
+								<span class="image main"><img src="images/my_face.jpg" alt="" width = 100 height = 1000/></span>
 								<p>Hello, I'm Seoyoung Choi, majoring in software at Dankkok University! 
+									<br> Originally, I was interested in Android FE, so I worked on a project 
+									related to it. But now I am studying because I am interested in web BE.
 									<br>If you want to see my work, please visit <a href="#work">HERE</a></p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/project.png" alt="" /></span>
+								<p>"With me" is my most representative project and is an application made by a total of eight developers and one designer. 
+									<br>This application helps people with various purposes (ex) exercise, study, etc.) to gather and do group activities. 
+									<br>I've been a front-end developer in this activity and check <a href="https://github.com/seoyoung9/WithmeFront.git">this link</a> for details.</p>
+								<p></p>
 							</article>
 
 						<!-- About -->
