--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/hobby.jpg" alt="" /><img src="images/hobby1.jpg" alt="" />
-									<img src="images/hobby3.jpg" alt="" /><img src="images/hobby4.jpg" alt="" /></span>
+									<img src="images/hobby3.jpg" alt="" /><img src="images/hobby.jpg" alt="" /></span>
 								<p></p>
 							</article>
 
