--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/hobby.jpg" alt="" /><img src="images/hobby1.jpg" alt="" />
 									<img src="images/hobby3.jpg" alt="" /><img src="images/hobby.jpg" alt="" /></span>
-								<p></p>
+								<p>Aside from coding, my hobby these days is sailing. 
+									<br>Dankook University has a yacht club, so I can meet various people and ride yachts! 
+									<br>I like extreme activities, so I'm enjoying yachting a lot.
+									<br>Last year, I went to marine training for two weeks in summer and one week in winter to ride a yacht.
+									<br>The ocean I see while riding a yacht is really pretty and cool</p>
 							</article>
 
 						<!-- Contact -->
