--- a/index.html
+++ b/index.html
@@ -68,11 +68,15 @@
 									<br>I like extreme activities, so I'm enjoying yachting a lot.
 									<br>Last year, I went to marine training for two weeks in summer and one week in winter to ride a yacht.
 									<br>The ocean I see while riding a yacht is really pretty and cool</p>
+									
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>	
+								<p>If you want to contact me, please use email.
+									<br>my email address is "2001609@naver.com"</p>
+								</p>
 								<ul class="icons">
 									<li><a href="https://github.com/seoyoung9" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
