--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 									<br>Dankook University has a yacht club, so I can meet various people and ride yachts! 
 									<br>I like extreme activities, so I'm enjoying yachting a lot.
 									<br>Last year, I went to marine training for two weeks in summer and one week in winter to ride a yacht.
-									<br>The ocean I see while riding a yacht is really pretty and cool</p>
+									<br>The ocean I see while riding a yacht is really pretty and cool
+									<br>It's not a video of me riding a yacht, but if you want to see what kind of yacht I'm riding, you can click on this link</p>
 									
 							</article>
 
