--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 									<br>I like extreme activities, so I'm enjoying yachting a lot.
 									<br>Last year, I went to marine training for two weeks in summer and one week in winter to ride a yacht.
 									<br>The ocean I see while riding a yacht is really pretty and cool
-									<br>It's not a video of me riding a yacht, but if you want to see what kind of yacht I'm riding, you can click on this link</p>
+									<br>It's not a video of me riding a yacht, but if you want to see what kind of yacht I'm riding, 
+									you can see this video.
+									<br><iframe width="560" height="315" src="https://www.youtube.com/embed/miuus5ngIBA" title="YouTube video player" frameborder="0" 
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 									
 							</article>
 
