--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Seoyoung Choi</h1>
-								<p>성장하는 개발자 <br><a href="https://github.com/seoyoung9/Mid-Term-Project.git">GitHub</a> 
+								<p>성장하는 개발자입니다. <br><a href="https://github.com/seoyoung9/Mid-Term-Project.git">GitHub</a> 
 								<br> free templated created by <a href="https://html5up.net/">here</a></p>
 							</div>
 						</div>
